[project]
name = "fastrawgis"
version = "0.1.0"
description = "Integration of FastAPI, Strawberry, PostGIS, SQLAlchemy, and asyncpg."
authors = [{name = "Kinuax"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg (==0.30.0)",
    "geoalchemy2 (==0.17.1)",
    "pydantic-settings (==2.9.1)",
    "shapely (==2.1.0)",
    "sqlalchemy (==2.0.40)",
    "strawberry-graphql[cli] (==0.266.1)",
    "typer (==0.15.3)",
]

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
